bluec-tests/tests/valid/types_short/multi/args.c
int test_sum(int a, int b, int c, short d, int e, short f, int g, int h, short i) {
    return a + b + c + d + e + f + g + h + i;
}