bluec-tests/tests/invalid/types_unsigned/conflicting_params.c
int foo(unsigned short a);
int foo(unsigned int a);

int main(void) {
    return 0;
}
